--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.0",
+    "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
