--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "react": "^18",
+    "react-countup": "^6.4.2",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "swiper": "^10.3.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
