--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:5000/api/v1
+
+GET_UNIQUE_FIELD_DATA_WITH_COUNT_URL=http://localhost:5000/api/v1/services?limit=100
