--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:5000/api/v1
 
-GET_UNIQUE_FIELD_DATA_WITH_COUNT_URL=http://localhost:5000/api/v1/services?limit=100
+# GET_UNIQUE_FIELD_DATA_WITH_COUNT_URL=http://localhost:5000/api/v1/services?limit=100
+
+
+# NEXT_PUBLIC_API_BASE_URL=https://craftsmen-pro-a-offline-freelancer-marketplace-backend.vercel.app/api/v1
+
+GET_UNIQUE_FIELD_DATA_WITH_COUNT_URL=https://craftsmen-pro-a-offline-freelancer-marketplace-backend.vercel.app/api/v1/services?limit=100
